updated to latest panama EA build